2024-01-24  Steffen Maier  <maier@linux.ibm.com>

	* Version 3.0.1 contains small updates for building:

2023-05-11  Fedor Loshakov <loshakov@linux.ibm.com>

	* README: reflect that the code default is "no" for vendorlib
	build.

2022-06-30  Fedor Loshakov <loshakov@linux.ibm.com>

	* Makefile.am: use libzfcphbaapi.la for linking, so that
	automake creates explicit dependency on libzfcphbaapi.la for
	zfcp_ping/zfcp_show in resulting Makefile.

	* Makefile.am: add subdir-objects to automake options, so that
	automake can find files in subdirectories, like fc_tools.

	* configure.in: remove obsolete macro `AC_HEADER_STDC' and
	replace obsolete macro `AC_LANG_C' with `AC_LANG([C])'.

2021-03-29  Karsten Graul <kgraul@linux.ibm.com>

	* Version 3.0.0 re-licenses lib-zfcp-hbaapi to EPL-1.0

2018-04-26  Jens Remus <jremus@linux.ibm.com>

	* Version 2.2.0 contains additional port speed capabilities:

	* add port speed capabilities defined in FC-GS-7 draft revision 10.8
	from July 17, 2016: HBA_PORTSPEED_32GBIT, HBA_PORTSPEED_64GBIT,
	HBA_PORTSPEED_128GBIT, and HBA_PORTSPEED_256GBIT

2013-11-28  Steffen Maier <maier@linux.vnet.ibm.com>

	* Version 2.1.1 contains bugfixes and minor adaptations to build
	in recent Linux environments:

	* drop duplicate -lpthread from zfcphbaapi LDFLAGS

	* fix generation of hbaapi.h.3 man page for parallel builds

	* fix linking of zfcp_{ping,show} tools if building as vendorlib

	* fix duplicate man page references for recent automake versions

	* fix CFLAGS override to enable passing from outside

	* update bootstrap to proper shell script and point to alternatives

2010-06-12 Swen Schillig <swen@vnet.ibm.com>

	Added two utilities (zfcp_ping, zfcp_show) to ease the discovery
	of a storage area network.
	Updated Version to 2.1

2010-03-17  Sven Schuetz <sven@de.ibm.com>

	Added support for event triggers (kernel 2.6.36 required).
	Minor enhancements and bugfixes.

2008-08-04 Sven Schuetz <sven@de.ibm.com>

	* All files: