@@ -1,3 +1,8 @@
+2024-05-02  Fedor Loshakov <loshakov@linux.ibm.com>
+
+	* vlib.c, vlib_sg.c, fc_tools/zfcp_ping.c:
+	Fix -Wimplicit-function-declaration errors
+
 2024-01-24  Steffen Maier  <maier@linux.ibm.com>
 
 	* Version 3.0.1 contains small updates for building:
